docs/api/qiskit/0.37/qiskit.circuit.library.Barrier.mdx
---
title: Barrier (v0.37)
description: API reference for qiskit.circuit.library.Barrier in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.Barrier
---

# Barrier

<Class id="qiskit.circuit.library.Barrier" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/barrier.py" signature="Barrier(num_qubits)" modifiers="class">
  Bases: [`qiskit.circuit.instruction.Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")

  Barrier instruction.

  Create new barrier instruction.

  ## Methods

  <span id="qiskit-circuit-library-barrier-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.Barrier.add_decomposition" signature="Barrier.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-circuit-library-barrier-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.Barrier.assemble" signature="Barrier.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-circuit-library-barrier-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.Barrier.broadcast_arguments" signature="Barrier.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-circuit-library-barrier-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.Barrier.c_if" signature="Barrier.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-circuit-library-barrier-copy" />

  ### copy

  <Function id="qiskit.circuit.library.Barrier.copy" signature="Barrier.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-library-barrier-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.Barrier.inverse" signature="Barrier.inverse()">
    Special case. Return self.
  </Function>

  <span id="qiskit-circuit-library-barrier-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.Barrier.is_parameterized" signature="Barrier.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-circuit-library-barrier-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.Barrier.qasm" signature="Barrier.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-circuit-library-barrier-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.Barrier.repeat" signature="Barrier.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-circuit-library-barrier-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.circuit.library.Barrier.reverse_ops" signature="Barrier.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-library-barrier-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.circuit.library.Barrier.soft_compare" signature="Barrier.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-circuit-library-barrier-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.library.Barrier.validate_parameter" signature="Barrier.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.Barrier.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.Barrier.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.Barrier.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.Barrier.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.Barrier.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.Barrier.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.Barrier.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.Barrier.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.Barrier.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.Barrier.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

